Migrate bundles' configuration mgmt to ConfigurationService
- Change current logic where read/save config is completely managed by each bundle,
  with moving it to configuration manager. This decoupling will allow configuration
  manager to decide how to persist the bundles' configurations to disk, withouth
  necessarely depend on java serialization as today controlelr does.
  Also now file names can be static and each bundle does not need to track the container
  context in the file name (which was lame). This allow controller to erase container
  startup files on container removal, which was not possible today.
- Global and in container configuration services to expose
  two APIs for the other bundles to retrieve and save their config
- Per container startup files organized in directories (directory name = container name)
- Container startup directory removed on container removal, and created on container creation if not present

Change-Id: I58c283eb796cf2a60466a97162428a8c2ae478ae
Signed-off-by: Alessandro Boch <aboch@cisco.com>

--- a/opendaylight/forwarding/staticrouting/pom.xml
+++ b/opendaylight/forwarding/staticrouting/pom.xml
@@ -33,18 +33,15 @@
        org.opendaylight.controller.sal.utils,
        org.opendaylight.controller.sal.core,
        org.opendaylight.controller.configuration,
-       org.opendaylight.controller.forwardingrulesmanager,
        org.opendaylight.controller.hosttracker,
        org.opendaylight.controller.hosttracker.hostAware,
        org.opendaylight.controller.clustering.services,
        org.opendaylight.controller.sal.packet,
        org.opendaylight.controller.sal.routing,
-       org.opendaylight.controller.topologymanager,
        org.eclipse.osgi.framework.console,
        org.osgi.framework,
        org.slf4j,
-       org.apache.felix.dm,
-       org.apache.commons.lang3.builder
+       org.apache.felix.dm
       </Import-Package>
       <Export-Package>
        org.opendaylight.controller.forwarding.staticrouting
@@ -61,11 +58,7 @@
  <dependencies>
   <dependency>
    <groupId>org.opendaylight.controller</groupId>
-   <artifactId>topologymanager</artifactId>
-  </dependency>
-  <dependency>
-   <groupId>org.opendaylight.controller</groupId>
-   <artifactId>forwardingrulesmanager</artifactId>
+   <artifactId>clustering.services</artifactId>
   </dependency>
   <dependency>
    <groupId>org.opendaylight.controller</groupId>
