--- a/opendaylight/configuration/api/pom.xml
+++ b/opendaylight/configuration/api/pom.xml
@@ -28,8 +28,7 @@
         <configuration>
           <instructions>
             <Import-Package>
-              org.opendaylight.controller.sal.utils,
-              org.apache.commons.lang3.builder
+              org.opendaylight.controller.sal.utils
             </Import-Package>
             <Export-Package>
               org.opendaylight.controller.configuration
