Adding a couple of ovsdb config variables to the config.ini
Change-Id: I5c524121130845bd8d42f545430f5f06293cfc25
Signed-off-by: Madhu Venugopal <mavenugo@gmail.com>

--- a/opendaylight/distribution/opendaylight/src/main/resources/configuration/config.ini
+++ b/opendaylight/distribution/opendaylight/src/main/resources/configuration/config.ini
@@ -114,6 +114,14 @@ org.eclipse.gemini.web.tomcat.config.path=configuration/tomcat-server.xml
 # The maximum number of ports handled in one discovery batch (default 512)
 # of.discoveryBatchMaxPorts=512
 
+# OVSDB configuration
+# ovsdb plugin supports both active and passive connections. It listens on port 6640 by default for Active connections.
+ovsdb.listenPort=6640
+
+# ovsdb creates Openflow nodes/bridges. This configuration configures the bridge's Openflow version.
+# default Openflow version = 1.0, we also support 1.3.
+# ovsdb.of.version=1.3
+
 # TLS configuration
 # To enable TLS, set secureChannelEnabled=true and specify the location of controller Java KeyStore and TrustStore files.
 # The Java KeyStore contains controller's private key and certificate. The Java TrustStore contains the trusted certificate
