--- a/opendaylight/md-sal/sal-rest-connector/pom.xml
+++ b/opendaylight/md-sal/sal-rest-connector/pom.xml
@@ -79,6 +79,14 @@
       <version>2.4</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.yangtools.model</groupId>
+      <artifactId>ietf-inet-types</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.yangtools.model</groupId>
+      <artifactId>ietf-yang-types</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
