--- a/opendaylight/md-sal/sal-binding-broker/pom.xml
+++ b/opendaylight/md-sal/sal-binding-broker/pom.xml
@@ -56,7 +56,7 @@
                     <dependency>
                         <groupId>org.opendaylight.yangtools</groupId>
                         <artifactId>maven-sal-api-gen-plugin</artifactId>
-                        <version>0.6.0-SNAPSHOT</version>
+                        <version>0.6.1</version>
                         <type>jar</type>
                     </dependency>
                 </dependencies>
@@ -253,12 +253,12 @@
             <dependency>
             <groupId>org.opendaylight.yangtools.model</groupId>
             <artifactId>ietf-inet-types</artifactId>
-            <version>2010.09.24.2-SNAPSHOT</version>
+            <version>2010.09.24.3</version>
         </dependency>
         <dependency>
         <groupId>org.opendaylight.yangtools.model</groupId>
         <artifactId>ietf-topology-l3-unicast-igp</artifactId>
-        <version>2013.10.21.0-SNAPSHOT</version>
+        <version>2013.10.21.1</version>
         <scope>test</scope>
         </dependency>
         <dependency>
