--- a/opendaylight/md-sal/sal-common-api/pom.xml
+++ b/opendaylight/md-sal/sal-common-api/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>concepts</artifactId>
-            <version>0.6.0-SNAPSHOT</version>
+            <version>0.6.1</version>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
