--- a/opendaylight/md-sal/sal-common-util/pom.xml
+++ b/opendaylight/md-sal/sal-common-util/pom.xml
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>org.opendaylight.yangtools</groupId>
       <artifactId>concepts</artifactId>
-      <version>0.6.0-SNAPSHOT</version>
+      <version>0.6.1</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
