--- a/opendaylight/md-sal/sal-netconf-connector/pom.xml
+++ b/opendaylight/md-sal/sal-netconf-connector/pom.xml
@@ -178,7 +178,7 @@
         <dependency>
             <groupId>org.opendaylight.yangtools.model</groupId>
             <artifactId>ietf-inet-types</artifactId>
-            <version>2010.09.24.2-SNAPSHOT</version>
+            <version>2010.09.24.3</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.controller</groupId>
@@ -247,7 +247,7 @@
                     <dependency>
                         <groupId>org.opendaylight.yangtools</groupId>
                         <artifactId>maven-sal-api-gen-plugin</artifactId>
-                        <version>0.6.0-SNAPSHOT</version>
+                        <version>0.6.1</version>
                         <type>jar</type>
                     </dependency>
                 </dependencies>
