--- a/opendaylight/md-sal/sal-remoterpc-connector/implementation/pom.xml
+++ b/opendaylight/md-sal/sal-remoterpc-connector/implementation/pom.xml
@@ -189,7 +189,7 @@
                     <dependency>
                         <groupId>org.opendaylight.yangtools</groupId>
                         <artifactId>maven-sal-api-gen-plugin</artifactId>
-                        <version>0.6.0-SNAPSHOT</version>
+                        <version>0.6.1</version>
                         <type>jar</type>
                     </dependency>
                 </dependencies>
