--- a/opendaylight/md-sal/sal-remoterpc-connector/integrationtest/test-it/pom.xml
+++ b/opendaylight/md-sal/sal-remoterpc-connector/integrationtest/test-it/pom.xml
@@ -329,12 +329,12 @@
         <dependency>
             <groupId>org.opendaylight.yangtools.model</groupId>
             <artifactId>yang-ext</artifactId>
-            <version>2013.09.07.2-SNAPSHOT</version>
+            <version>2013.09.07.3</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools.model</groupId>
             <artifactId>opendaylight-l2-types</artifactId>
-            <version>2013.08.27.2-SNAPSHOT</version>
+            <version>2013.08.27.3</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.controller</groupId>
