Removed javadoc declaration from md-sal to enable parent javadocs settings.
Change-Id: Ic0207a98d8755cb1ea12d570e37d55e76c94f4b6
Signed-off-by: Martin Vitez <mvitez@cisco.com>

--- a/opendaylight/netconf/pom.xml
+++ b/opendaylight/netconf/pom.xml
@@ -50,6 +50,7 @@
         <netconf.netty.version>4.0.10.Final</netconf.netty.version>
         <netconf.version>0.2.4-1-SNAPSHOT</netconf.version>
         <config.version>0.2.4-1-SNAPSHOT</config.version>
+        <salGeneratorPath>${project.build.directory}/generated-sources/sal</salGeneratorPath>
     </properties>
 
     <dependencies>
