Fixed generation of javadocs for md-sal.
Change-Id: Ic0207a98d8755cb1ea12d570e37d55e76c94f4b6
Signed-off-by: Martin Vitez <mvitez@cisco.com>

--- a/opendaylight/md-sal/pom.xml
+++ b/opendaylight/md-sal/pom.xml
@@ -474,6 +474,12 @@
                 </configuration>
                 <executions>
                     <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                    <execution>
                         <goals>
                             <goal>aggregate</goal>
                         </goals>
