DO NOT MERGE ODL modified version
This version builds distribution of ODL with yangtools 0.6.1-SNAPSHOT which contains Fix in yang binding to properly transform
Data DOM to Data object body.
md-sal imports yangtools 0.6.1-SNAPSHOT as dependency.
This is specifically modified distribution for ODL plugin applications that need to support capability of listening on incoming notifications. This commit
is dependent on ODL fix that hasn't been yet merged. The fix is solving forwarding of notifications from netconf client to ODL plugin application. Also this commit
contains code that fixes RPC response body from rpc invoked through the restconf.

Change-Id: I1c2246bf575c0912d099d2e6fa331872b05b8321
Signed-off-by: Lukas Sedlak <lsedlak@cisco.com>

--- a/opendaylight/md-sal/pom.xml
+++ b/opendaylight/md-sal/pom.xml
@@ -102,7 +102,7 @@
     </profiles>
 
     <properties>
-        <yangtools.version>0.6.1</yangtools.version>
+        <yangtools.version>0.6.1-SNAPSHOT</yangtools.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <nexusproxy>http://nexus.opendaylight.org/content</nexusproxy>
         <!-- Java Versions -->
