Apply configs' name convention to authorization roles and resource groups
- Also include Switch config

Change-Id: If84199a1db6e1fc35c02c4b92493f99aeb8d8af8
Signed-off-by: Alessandro Boch <aboch@cisco.com>

--- a/opendaylight/appauth/pom.xml
+++ b/opendaylight/appauth/pom.xml
@@ -27,6 +27,7 @@
                 <configuration>
                     <instructions>
                         <Import-Package>
+                            org.opendaylight.controller.configuration,
                             org.opendaylight.controller.containermanager,
                             org.opendaylight.controller.sal.authorization,
                             org.opendaylight.controller.sal.utils,
@@ -47,6 +48,10 @@
     </build>
 
     <dependencies>
+      <dependency>
+        <groupId>org.opendaylight.controller</groupId>
+        <artifactId>configuration</artifactId>
+      </dependency>
       <dependency>
         <groupId>org.opendaylight.controller</groupId>
         <artifactId>sal</artifactId>
