Import OpenEXI nagasena-0000.0002.0027.0
Change-Id: I4ec0fc637f390fe14451c439870ec1846934ebbb
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/opendaylight/netconf/pom.xml
+++ b/opendaylight/netconf/pom.xml
@@ -29,6 +29,7 @@
         <module>netconf-monitoring</module>
         <module>ietf-netconf-monitoring</module>
         <module>ietf-netconf-monitoring-extension</module>
+        <module>../../third-party/org.openexi</module>
     </modules>
 
     <profiles>
