Added resource /streams/stream/<streamName>
- added netty web socket server - port 8181

Subscriber can be registered for notifications in this flow:
1. Subscriber invokes RPC create-data-change-event-subscription with input element regarding to module sal-remote revision "2014-01-14"
2. Subscriber gets sream name as a response from server
3. Subscriber calls GET operation on /streams/stream/<streamName>
4. Subscriber gets response with status code 200 OK and header field Location contains URI of web socket server
5. Subscriber creates web socket http connection to obtained URI in step 4.
6. Subscriber can be unregistered from receiving notifications by sending CloseWebSocketFrame with reasonText containing stream name

Change-Id: I92925f5a50b2ceadf2cc8f0eaee2c99dd6a63d8d
Signed-off-by: Martin Sunal <msunal@cisco.com>

--- a/opendaylight/commons/opendaylight/pom.xml
+++ b/opendaylight/commons/opendaylight/pom.xml
@@ -722,6 +722,11 @@
             <artifactId>netty-common</artifactId>
             <version>${netty.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-codec-http</artifactId>
+            <version>${netty.version}</version>
+        </dependency>
 
       <!-- yangtools dependencies -->
       <dependency>
