Added resource /streams/stream/<streamName>
- added netty web socket server - port 8181

Change-Id: I92925f5a50b2ceadf2cc8f0eaee2c99dd6a63d8d
Signed-off-by: Martin Sunal <msunal@cisco.com>

--- a/opendaylight/md-sal/sal-rest-connector/pom.xml
+++ b/opendaylight/md-sal/sal-rest-connector/pom.xml
@@ -51,8 +51,13 @@
       <version>2.2.4</version>
     </dependency>
     <dependency>
-     <groupId>org.opendaylight.yangtools</groupId>
-     <artifactId>yang-parser-impl</artifactId>
+      <groupId>org.opendaylight.yangtools</groupId>
+      <artifactId>yang-parser-impl</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>4.0.10.Final</version>
     </dependency>
     
     <!-- Testing Dependencies -->
