--- a/opendaylight/md-sal/samples/pom.xml
+++ b/opendaylight/md-sal/samples/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -18,7 +19,7 @@
 		<module>toaster</module>
 		<module>toaster-consumer</module>
 		<module>toaster-provider</module>
-	</modules>
+  </modules>
 
     <profiles>
       <profile>
@@ -27,7 +28,7 @@
           <activeByDefault>false</activeByDefault>
         </activation>
         <modules>
-          <!--module>toaster-it</module -->
+          <module>toaster-it</module>
         </modules>
       </profile>
     </profiles>
