Fix Plugin execution not covered in Eclipse for config subsystem
yang-test, yang-test-plugin

Change-Id: I9be015e1221ad9ff143370bb68837e0c55558a3e
Signed-off-by: Maros Marsalek <mmarsale@cisco.com>

--- a/opendaylight/config/yang-test/pom.xml
+++ b/opendaylight/config/yang-test/pom.xml
@@ -59,7 +59,49 @@
         </dependency>
     </dependencies>
 
+
+
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.eclipse.m2e</groupId>
+                    <artifactId>lifecycle-mapping</artifactId>
+                    <version>1.0.0</version>
+                    <configuration>
+                        <lifecycleMappingMetadata>
+                            <pluginExecutions>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>
+                                            org.opendaylight.controller
+                                        </groupId>
+                                        <artifactId>
+                                            yang-test-plugin
+                                        </artifactId>
+                                        <versionRange>
+                                            [0.2.3,)
+                                        </versionRange>
+                                        <goals>
+                                            <goal>
+                                                delete-sources
+                                            </goal>
+                                            <goal>
+                                                process-sources
+                                            </goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore/>
+                                    </action>
+                                </pluginExecution>
+                            </pluginExecutions>
+                        </lifecycleMappingMetadata>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
         <plugins>
             <plugin>
                 <groupId>org.opendaylight.yangtools</groupId>
