Add EXI codecs without wiring them
Change-Id: Ic708ef26d92e138f8269a49a2759f01d88085bf1
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/opendaylight/netconf/netconf-util/pom.xml
+++ b/opendaylight/netconf/netconf-util/pom.xml
@@ -50,6 +50,11 @@
             <groupId>org.opendaylight.controller.thirdparty</groupId>
             <artifactId>ganymed</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.controller.thirdparty</groupId>
+            <artifactId>nagasena</artifactId>
+            <version>0000.0002.0027.0</version>
+        </dependency>
     </dependencies>
 
     <build>
