--- a/opendaylight/commons/opendaylight/pom.xml
+++ b/opendaylight/commons/opendaylight/pom.xml
@@ -1722,6 +1722,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${surefire.version}</version>
         <configuration>
+          <argLine>${testvm.argLine}</argLine>
           <systemProperties>
             <property>
               <name>logback.configurationFile</name>
