--- a/opendaylight/configuration/implementation/pom.xml
+++ b/opendaylight/configuration/implementation/pom.xml
@@ -32,6 +32,7 @@
               org.opendaylight.controller.clustering.services,
               org.opendaylight.controller.sal.utils,
               org.opendaylight.controller.sal.core,
+              org.opendaylight.controller.containermanager,
               org.osgi.framework,
               org.slf4j,
               org.apache.felix.dm
@@ -63,6 +64,10 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+    </dependency>
+     <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>containermanager</artifactId>
     </dependency>
   </dependencies>
 </project>
