Refactor logback-config.
Preparation for separating out appenders from logback-config bundle. Appenders are now defined in a separate yang file.
Rewrite updating of logback settings from direct logback API interactions to in memory XML based reconfiguration,
because the APIs open too many posibilities for bugs and resource leaks.
Rewrite initial population of configuration, most notably add additivity attribute to loggers, remove transient loggers
that were instantiated in run-time.
Introduce dependency on xom:xom:1.2.5 as the w3c dom api is unusable.
TODO: in order to separate the appenders and not relying on start levels that would initialize those bundles before
logback-config, semantics of default modules will need to change - default modules should be able to be instantiated
anytime a transaction is committed, not only when the corresponding bundle is started. Validation of whether all
appenders are present needs also changes to validation APIs.

Change-Id: Id34215d0f4801925e958efbdd4bb43033c33726d
Signed-off-by: Tomas Olvecky <tolvecky@cisco.com>

--- a/opendaylight/distribution/opendaylight/pom.xml
+++ b/opendaylight/distribution/opendaylight/pom.xml
@@ -1253,6 +1253,11 @@
       <artifactId>netty-codec-http</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>xom</groupId>
+      <artifactId>xom</artifactId>
+    </dependency>
+
     <!-- testing dependencies I'm pretty sure we should trim -->
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
