--- a/opendaylight/commons/opendaylight/pom.xml
+++ b/opendaylight/commons/opendaylight/pom.xml
@@ -114,6 +114,7 @@
     <java.version.target>1.7</java.version.target>
     <!-- enforcer version -->
     <enforcer.version>1.3.1</enforcer.version>
+    <xom.version>1.2.5</xom.version>
   </properties>
 
   <dependencyManagement>
@@ -1347,6 +1348,11 @@
           <groupId>org.opendaylight.controller</groupId>
           <artifactId>shutdown-impl</artifactId>
           <version>${config.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>xom</groupId>
+          <artifactId>xom</artifactId>
+          <version>${xom.version}</version>
         </dependency>
 
        <!-- Netconf -->
