--- a/opendaylight/config/logback-config/pom.xml
+++ b/opendaylight/config/logback-config/pom.xml
@@ -68,6 +68,17 @@
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>xom</groupId>
+            <artifactId>xom</artifactId>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
@@ -76,11 +87,8 @@
                 <artifactId>maven-bundle-plugin</artifactId>
                 <configuration>
                     <instructions>
-                        <Private-Package>
-                        </Private-Package>
                         <Export-Package>
-                            org.opendaylight.controller.config.yang.logback.config,
-                            org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.controller.logback.config.rev130716.*,
+                            org.opendaylight.controller.config.yang.logback.api
                         </Export-Package>
                     </instructions>
                 </configuration>
