--- a/opendaylight/netconf/config-persister-impl/pom.xml
+++ b/opendaylight/netconf/config-persister-impl/pom.xml
@@ -49,6 +49,17 @@
 
         <!-- test dependencies -->
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>netconf-impl</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>netconf-util</artifactId>
+            <scope>test</scope>
+            <type>test-jar</type>
+        </dependency>
+        <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>mockito-configuration</artifactId>
         </dependency>
