Refactor configuration for ConfigPersister.
Pulled Configuration class from ConfigPusher that contains all the delays, timeouts and attempts numbers.

Add tests for config perister.

Change-Id: I187e721e0120931d0cca519353db840905816a20
Signed-off-by: Maros Marsalek <mmarsale@cisco.com>

--- a/opendaylight/netconf/netconf-api/pom.xml
+++ b/opendaylight/netconf/netconf-api/pom.xml
@@ -52,6 +52,7 @@
                             javax.management,
                             org.opendaylight.controller.config.api,
                             org.opendaylight.controller.config.api.jmx,
+                            org.opendaylight.controller.config.api,
                             org.opendaylight.protocol.framework,
                             io.netty.channel,
                             io.netty.util.concurrent,
