--- a/opendaylight/netconf/netconf-api/pom.xml
+++ b/opendaylight/netconf/netconf-api/pom.xml
@@ -51,6 +51,7 @@
                         <Import-Package>
                             javax.management,
                             org.opendaylight.controller.config.api.jmx,
+                            org.opendaylight.controller.config.api,
                             org.opendaylight.protocol.framework,
                             io.netty.channel,
                             io.netty.util.concurrent,
