Refactor confgiraution for ConfigPersister.
Pulled Configuration class from ConfigPusher that contains all the delays, timeouts and attempts numbers.

Add tests for config perister.

Change-Id: I187e721e0120931d0cca519353db840905816a20
Signed-off-by: Maros Marsalek <mmarsale@cisco.com>

--- a/opendaylight/netconf/config-persister-impl/pom.xml
+++ b/opendaylight/netconf/config-persister-impl/pom.xml
@@ -49,6 +49,11 @@
 
         <!-- test dependencies -->
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>netconf-impl</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>mockito-configuration</artifactId>
         </dependency>
